<resources>
    <string name="app_name">Nykaa</string>
    <string name="login_or_register">Login or Register</string>
    <string name="phone_or_email">Continue with Phone or Email</string>
    <string name="google">Continue with Google</string>
    <string name="skip">Skip for now</string>
    <string name="enter_phone_email">Enter Phone Number or Email ID</string>
    <string name="proceed">Proceed</string>
    <string name="login_register">Login/Register</string>
    <string name="agreement"><![CDATA[By continuing, I agree to Nykaa\'s ]]></string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back Nykaa user</string>
    <string name="enter_otp">Please enter the OTP sent on your phone</string>
    <string name="resend">RESEND</string>
    <string name="verify">Verify</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome to Nykaa. Register now and get</string>
    <string name="reward">2000 Nykaa reward points instantly!</string>
    <string name="choose_password">Choose Password</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="tc"><![CDATA[T&C]]></string>
    <string name="otp_sent">OTP sent successfully!</string>
    <string name="complete_registration">To complete your registration, we have sent an OTP to your number to verify</string>
    <string name="almost_there">Almost There!</string>
    <string name="email">E-mail Address</string>
    <string name="save">Save</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">OR</string>
    <string name="send_otp_on_email">SEND OTP ON EMAIL</string>
    <string name="enter_otp_sent_on_mail">Please enter the OTP sent on your email</string>
    <string name="otp_sent_check_spam">OTP sent successfully! Be sure to check your spam folder!</string>
    <string name="open_email_apps">OPEN EMAIL APPS</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="account">Account</string>
    <string name="search">Search on Nykaa</string>
    <string name="logout">Logout</string>
    <string name="enter_password">Enter your password</string>
    <string name="send_otp">Send OTP</string>
    <string name="login_text_one">1,00,000+ Products from \n 850+ Brands</string>
    <string name="login_text_two">Genuine Products \n Sourced Directly from the Brand</string>
    <string name="login_text_three"><![CDATA[Stay Up-to-Date with the \n Best Deals & Offers]]></string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="add_to_bag">ADD TO BAG</string>
    <string name="hello_user">Hello, Nykaa User</string>
</resources>