<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp_20">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/ic_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/close"
            android:text="@string/almost_there"
            android:textColor="@color/grey_800"
            android:textSize="@dimen/sp_20" />

    </RelativeLayout>

    <TextView
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/grey_200"
        android:padding="@dimen/dp_15"
        android:textAlignment="center"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:backgroundTint="@color/pink"
        android:hint="@string/full_name"
        android:minHeight="48dp"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:backgroundTint="@color/pink"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textSize="@dimen/sp_14" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:padding="@dimen/dp_20"
        android:text="@string/save"
        android:textColor="@color/white" />

</LinearLayout>