<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp_20">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/ic_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/close"
            android:text="@string/login"
            android:textColor="@color/grey_800"
            android:textSize="@dimen/sp_20" />

    </RelativeLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/rectangle_pink_outline"
        android:padding="@dimen/dp_15"
        android:textAlignment="center"
        android:textColor="@color/grey_800"
        android:textColorHint="@color/grey_600"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginVertical="@dimen/dp_10"
        android:background="@drawable/rectangle_grey_outline"
        android:padding="@dimen/dp_15">

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:src="@drawable/ic_google" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_with_google"
            android:textColor="@color/grey_600"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_margin="@dimen/dp_20"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_2"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/grey_400" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_2"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/line" />

    </LinearLayout>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/rectangle_grey_outline"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="@dimen/dp_15"
        android:textAlignment="center"
        android:textColorHint="@color/grey_600"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginVertical="@dimen/dp_10"
        android:background="@drawable/rectangle_pink_outline"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        android:text="@string/proceed"
        android:textAllCaps="true"
        android:textColor="@color/pink"
        android:textStyle="bold" />

</LinearLayout>