<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/dp_20">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/ic_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/close"
            android:text="@string/register"
            android:textColor="@color/grey_800"
            android:textSize="@dimen/sp_20" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reward"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/rectangle_pink_outline"
        android:padding="@dimen/dp_14"
        android:textAlignment="center"
        android:textColor="@color/grey_800"
        android:textColorHint="@color/grey_600"
        android:textSize="@dimen/sp_14" />

    <Button
        android:id="@+id/sendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="@color/grey_600"
        android:text="@string/send_otp"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:textAlignment="center"
        android:text="@string/complete_registration"/>

    <EditText
        android:id="@+id/otp"
        android:layout_margin="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:padding="@dimen/dp_15" />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/otpOne"
            android:maxLength="1"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_5"
            android:backgroundTint="@color/pink"
            android:padding="@dimen/dp_10" />

        <EditText
            android:maxLength="1"
            android:id="@+id/otpTwo"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_5"
            android:backgroundTint="@color/pink"
            android:padding="@dimen/dp_10" />

        <EditText
            android:maxLength="1"
            android:id="@+id/otpThree"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_5"
            android:backgroundTint="@color/pink"
            android:padding="@dimen/dp_10" />

        <EditText
            android:maxLength="1"
            android:id="@+id/otpFour"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_5"
            android:backgroundTint="@color/pink"
            android:padding="@dimen/dp_10" />

        <EditText
            android:maxLength="1"
            android:id="@+id/otpFive"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_5"
            android:backgroundTint="@color/pink"
            android:padding="@dimen/dp_10" />

        <EditText
            android:maxLength="1"
            android:id="@+id/otpSix"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_5"
            android:backgroundTint="@color/pink"
            android:padding="@dimen/dp_10" />

    </LinearLayout>-->

    <TextView
        android:id="@+id/otpSent"
        android:layout_gravity="center"
        android:textColor="@color/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_10" />

    <TextView
        android:id="@+id/resend"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"/>

    <Button
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        android:padding="@dimen/dp_20"
        android:text="@string/verify"
        android:textColor="@color/white" />

</LinearLayout>