<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".welcome.LoginScreen">

    <ImageView
        android:id="@+id/nykaa"
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_70"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/nykaa"
        android:contentDescription="@string/app_name" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/dotsLayout"
        android:layout_below="@id/nykaa" />

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_25"
        android:layout_above="@id/firstOrderOffer"
        android:gravity="center">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:scrollbars="none"
            app:tabBackground="@drawable/dot_selector"
            app:tabIndicatorAnimationDuration="300"
            app:tabIndicatorHeight="@dimen/dp_0"
            app:tabSelectedTextColor="@color/pink" />

    </LinearLayout>

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/skip"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginVertical="@dimen/dp_10"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:padding="@dimen/dp_10">

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_20"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

    <Button
        android:id="@+id/phoneEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/google"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginVertical="@dimen/dp_10"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/pink"
        android:text="@string/phone_or_email"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/loginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/phoneEmail"
        android:layout_centerHorizontal="true"
        android:text="@string/login_or_register"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/firstOrderOffer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_above="@id/loginRegister"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginVertical="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:src="@drawable/first_order_offer" />

</RelativeLayout>